<resources>
    <string name="app_name">K224112E</string>
    <string name="str_welcome">Welcome to K224112E</string>
    <string name="str_say_hello">Welcome to K224112E</string>
    <string name="str_clickme_to_say_hello">Say Hello1</string>
    <string name="str_login_system">Login System</string>
    <string name="str_username">UserName</string>
    <string name="str_hint_username">Enter your username</string>
    <string name="str_login">Login</string>
    <string name="str_exit">Exit</string>
    <string name="str_password">Password</string>
    <string name="str_hint_password">Enter your Password</string>
    <string name="str_login_success">Login successfully!!</string>
    <string name="str_login_failed">Login failed!!</string>
    <string name="str_mc">MC</string>
    <string name="str_mr">MR</string>
    <string name="str_mplus">M+</string>
    <string name="str_mminus">M-</string>
    <string name="str_ms">MS</string>
    <string name="str_m">M</string>
    <string name="str_open_calculator_app">Open Calculator App</string>
    <string name="str_save_login_info">Save Login Information</string>
    <string name="str_login_role">Login Role</string>
    <string name="str_role_employee">Employee</string>
    <string name="str_role_admin4">Admin</string>
    <string name="str_confirm_exit">Are you sure you want to exit?</string>
    <string name="str_out">REALLY?</string>
    <string name="str_co">YES</string>
    <string name="str_khong">NO</string>
    <string name="str_employee_id">Employee id:</string>
    <string name="str_employee_name">Employee name:</string>
    <string name="str_employee_id1">Employee id:</string>
    <string name="str_phone_number">Phone Number</string>
    <string name="str_save">Save</string>
    <string name="str_del">Del</string>
    <string name="str_department">Department</string>
    <string name="str_employee">List of Employee</string>
    <string name="str_birth_place">Birthplace</string>
    <string name="str_order_report">Order Report</string>
    <string name="str_from_date">From date</string>
    <string name="str_to_date">To date</string>
    <string name="str_order_all_status">All Status Order</string>
    <string name="str_order_status_completed">Completed Order</string>
    <string name="str_order_status_not_yetpayment">Notyet Payment Order</string>
    <string name="str_order_status_going_logistic">Going Logistic Order</string>
    <string name="str_order_status_customer_angry">Customer Angry Order\n</string>
    <string name="str_category_statistics">Category Statistics</string>
    <string name="str_new_category">New Category</string>
    <string name="str_category_id">Category ID\n</string>
    <string name="str_category_name">Category Name\n</string>
    <string name="str_category_desc">Descriptions</string>
    <string name="str_cancel">CANCEL\n</string>
    <string name="str_category_new">New Category</string>
    <string name="str_phone">Phone:</string>
    <string name="str_time">Time:</string>
    <string name="str_message_body1">Message:</string>
    <string name="str_sms_spy">SMSSpyWare</string>
    <string name="str_number_button">Number of Button</string>
    <string name="str_create_button">CREATE BUTTON</string>
    <string name="str_multi_threading1">Open Multi Threading</string>
    <string name="str_number_product">Number Product</string>
    <string name="str_download_product">Download Product</string>
    <string name="str_multithreading_object">MultiThreadingObject</string>
    <string-array name="list_birthplace">
        <item>An Giang</item>
        <item>Bắc Thái</item>
        <item>Bến Tre</item>
        <item>Bình Trị Thiên</item>
        <item>Cao Lạng</item>
        <item>Cửu Long</item>
        <item>Đắk Lắk</item>
        <item>Đặc khu Vũng Tàu - Côn Đảo</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai - Kon Tum</item>
        <item>Hà Bắc</item>
        <item>Hà Nam Ninh</item>
        <item>Hà Nội</item>
        <item>Hải Hưng</item>
        <item>Hải Phòng</item>
        <item>Hà Sơn Bình</item>
        <item>Hà Tuyên</item>
        <item>Hậu Giang</item>
        <item>Hoàng Liên Sơn</item>
        <item>Kiên Giang</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Long An</item>
        <item>Minh Hải</item>
        <item>Nghệ Tĩnh</item>
        <item>Nghĩa Bình</item>
        <item>Phú Khánh</item>
        <item>Quảng Nam - Đà Nẵng</item>
        <item>Quảng Ninh</item>
        <item>Sông Bé</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thanh Hóa</item>
        <item>Tiền Giang</item>
        <item>TP Hồ Chí Minh</item>
        <item>Thuận Hải</item>
        <item>Vĩnh Phú</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="str_play_audio_1">Play audio 1</string>
    <string name="str_play_audio_2">Play audio 2</string>
    <string name="str_uel">UEL</string>
    <string name="str_font_music">Open Fonts And Music\n</string>
    <string name="str_hocky">Nhập học kỳ</string>
    <string name="str_voice_recognition">V</string>
    <string name="str_get_data">Get Data\n</string>
</resources>