<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lvEmployee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@mipmap/rabbit"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_login_system"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:text="@string/str_username"
        android:textColor="@color/red"
        android:textSize="20sp" />

    <EditText
        android:text="admin"
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/str_hint_username"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:text="@string/str_password"
        android:textColor="@color/red"
        android:textSize="20sp" />

    <EditText
        android:text="123"
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/str_hint_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_login_role" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_role_admin4" />

            <RadioButton
                android:id="@+id/radEmployee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_role_employee" />
        </LinearLayout>

    </RadioGroup>

    <CheckBox
        android:id="@+id/chkSaveLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_save_login_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:onClick="LoginSystem"
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_login" />

        <Button
            android:onClick="ExitSystem"
            android:id="@+id/edtbutton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_exit" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow" />

</LinearLayout>