<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderManagementActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_order_report"
        android:textAlignment="center"
        android:textSize="34sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:text="@string/str_from_date" />

            <TextView
                android:id="@+id/txtFromDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/material_dynamic_primary80"
                android:text="01/01/2026" />

            <ImageView
                android:id="@+id/imgFromDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@mipmap/ic_date" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/yellow"
                android:text="@string/str_to_date" />

            <TextView
                android:id="@+id/txtToDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/material_dynamic_primary70"
                android:text="31/12/2026" />

            <ImageView
                android:id="@+id/imgToDate"
                android:layout_width="272dp"
                android:layout_height="match_parent"
                app:srcCompat="@mipmap/ic_date" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgClearFilter"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_clear" />

        <ImageView
            android:id="@+id/imgFilter"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_filter" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>